--- a/css/styles.css
+++ b/css/styles.css
@@ -452,3 +452,22 @@ footer {
   margin: 16px 32px;
   fill: #afb1b8;
 }
+
+.icon-logo-0 {
+  padding: 18px 32px 14px 32px;
+}
+.icon-logo-1 {
+  padding: 18px 32px 14px 32px;
+}
+.icon-logo-2 {
+  padding: 16px 32px;
+}
+.icon-logo-3 {
+  padding: 16px 32px;
+}
+.icon-logo-4 {
+  padding: 16px 32px;
+}
+.icon-logo-5 {
+  padding: 16px 32px;
+}
