--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,10 @@ footer {
 .webstudio-section {
   background: #2f303a;
   padding: 200px 0;
+  background-image: url(./images/image-header.jpg);
+  background-position: center;
+  background-size: cover;
+  min-height: 600px;
 }
 
 .button-webstudio {
@@ -451,23 +455,4 @@ footer {
 .client-icon {
   margin: 16px 32px;
   fill: #afb1b8;
-}
-
-.icon-logo-0 {
-  padding: 18px 32px 14px 32px;
-}
-.icon-logo-1 {
-  padding: 18px 32px 14px 32px;
-}
-.icon-logo-2 {
-  padding: 16px 32px;
-}
-.icon-logo-3 {
-  padding: 16px 32px;
-}
-.icon-logo-4 {
-  padding: 16px 32px;
-}
-.icon-logo-5 {
-  padding: 16px 32px;
 }
