--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,13 @@ footer {
   gap: 30px;
 }
 
+.lorem-picture {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
+}
+
 .lorem-h2 {
   color: #212121;
   font-size: 14px;
