--- a/css/styles.css
+++ b/css/styles.css
@@ -347,12 +347,12 @@ footer {
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
-  margin-bottom: 30px;
   border-radius: 4px;
 }
 
 .lorem-icon {
   padding: 25px 100px;
+  align-items: center;
 }
 
 .lorem-h2 {
@@ -362,6 +362,7 @@ footer {
   font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-top: 30px;
 }
 
 .paragraph-lorem {
@@ -433,6 +434,14 @@ footer {
 .under-photo {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+.our-team-media {
+  display: flex;
+  max-width: 206px;
+  justify-content: space-around;
+  margin: auto;
+  margin-bottom: 18px;
 }
 
 .work-position {
