--- a/css/styles.css
+++ b/css/styles.css
@@ -347,12 +347,16 @@ footer {
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
+  align-content: center;
   border-radius: 4px;
+}
+
+.lorem-gap {
+  padding-top: 30px;
 }
 
 .lorem-icon {
   padding: 25px 100px;
-  align-items: center;
 }
 
 .lorem-h2 {
@@ -362,7 +366,6 @@ footer {
   font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-top: 30px;
 }
 
 .paragraph-lorem {
