--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,8 @@ nav {
 .button-link:focus {
   background-color: #2196f3;
   color: #ffffff;
+  box-shadow: inset 0px 2px 2px 0 rgba(0, 0, 0, 0.12),
+    inset 0 1px 2px 0 rgba(0, 0, 0, 0.08), inset 0 3px 1px 0 rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-frame {
