--- a/css/styles.css
+++ b/css/styles.css
@@ -67,16 +67,6 @@ a {
   text-decoration: none;
 }
 
-.header-icon {
-  display: inline;
-  margin-right: 10px;
-}
-
-.header-icon:hover,
-.header-icon:focus {
-  color: #2196f3;
-}
-
 .header-link {
   color: #212121;
   font-weight: 500;
@@ -99,15 +89,30 @@ nav {
   color: #2196f3;
 }
 
-.header-link:hover,
-.header-link:focus {
+.header-link .header-icon:hover,
+.header-link .header-icon:focus {
   color: #2196f3;
 }
 
-.header-ul {
+.header-mail-tel {
   display: flex;
   margin-left: auto;
   gap: 50px;
+}
+
+.header-mail-box {
+  width: 161px;
+  height: 16px;
+}
+
+.header-tel-box {
+  width: 130px;
+  height: 16px;
+}
+
+.header-icon {
+  display: inline;
+  margin-right: 10px;
 }
 
 .header-contact {
