--- a/css/styles.css
+++ b/css/styles.css
@@ -309,14 +309,18 @@ footer {
 }
 
 .webstudio-section {
-  background: #2f303a;
-  background-image: linear-gradient(to right, #2f303a, #2f303a);
+  background-color: #2f303a;
   padding: 200px 0;
-  background-image: url(/goit-markup-hw-04/images/image-header.jpg);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/image-header.jpg);
   background-position: center;
   background-size: cover;
   max-width: 1600px;
   min-height: 600px;
+  margin: 0 auto;
 }
 
 .button-webstudio {
