--- a/css/styles.css
+++ b/css/styles.css
@@ -242,48 +242,51 @@ footer {
   letter-spacing: 0.03em;
 }
 
+.one-block {
+  display: flex;
+  align-items: baseline;
+}
+
 .join-us-h3 {
+  display: flex;
   font-family: Roboto;
   color: #ffffff;
   font-size: 14px;
   font-weight: 700;
   line-height: 16px;
   letter-spacing: 0.03em;
-  text-align: left;
-  margin-top: 0;
-  margin-bottom: 20px;
+  text-align: center;
 }
 
-.footer-social-media {
+.block-two {
+  margin-right: 70px;
   display: flex;
   width: 206px;
   height: 80px;
-  justify-content: space-between;
 }
 
-.footer-icon-block {
-  display: inline-block;
+.footer-media {
+  display: flex;
+  justify-content: center;
+  display: flex;
   width: 206px;
   height: 80px;
-}
-
-.footer-icon-block-2 {
-  display: flex;
-  flex-direction: row;
-  margin-left: 532px;
-}
-
-.footer-icon {
-  stroke-width: 1px solid #fff;
-  margin: 12px;
+  gap: 10px;
+  margin-top: 20px;
 }
 
 .footer-icon-li {
   background-color: rgba(255, 255, 255, 0.1);
+  fill: #fff;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  margin-right: 10px;
+}
+
+.footer-icon-li:hover,
+.footer-icon-li:focus {
+  background-color: #2196f3;
+  fill: #fff;
 }
 
 .footer-between:not(:last-child) {
@@ -491,6 +494,8 @@ footer {
 }
 
 .media-icons {
+  width: 20px;
+  height: 20px;
   fill: currentColor;
 }
 
@@ -530,4 +535,29 @@ footer {
 .client-icon-div:hover,
 .client-icon-div:focus {
   border-color: #2196f3;
+}
+
+.icon-logo-0 {
+  width: 41px;
+  height: 46.7px;
+}
+.icon-logo-1 {
+  width: 40px;
+  height: 52px;
+}
+.icon-logo-2 {
+  width: 43.46px;
+  height: 41.18;
+}
+.icon-logo-3 {
+  width: 84.44px;
+  height: 40.62px;
+}
+.icon-logo-4 {
+  width: 62.54px;
+  height: 60.04px;
+}
+.icon-logo-5 {
+  width: 93.79px;
+  height: 43.93px;
 }
